2007-12-25
	* Updated localization files and manual.
	
2007-11-19
	* Added field for documents (presentations) to session records.

2007-11-08
	* Added option to set delimiter between the days in time slot view.

2007-10-18
	* Finished changes for more than one sys folder for event and common data.
	* "localize to" function for common and event data.

2007-10-09
	* Show common data from sub pages, if available.
	* Changed localization files from php to xml format.

2007-10-08
	* Show event data from sub pages, if available.

2007-10-06
	* Disabled fields that do not be translated when editing a translated record.
	* Added room number for room records.
	* Added color field for category records.
	* Fixed non display of begin and end time when no slot was on the first day.

2007-10-05
	* Added info text for time slot selection in session records.
	* Show country flags for all sessions with non default language.
	* Removed localization from time slots and speaker restrictions.

2007-10-04
	* Added different delimiter for list of speaker,sessions and slots.
	* Change table for speaker attendance to speaker restrictions.
	* Implement attention of speaker restrictions for time slot list in
	  session editing.

2007-10-03
	* Added slot info for speaker list and speaker view.
	* Only free time slots can be selected when editing sessions.
	* Changed template for time slots for compact display of time column.

2007-10-02
	* Possible hide the display of "not assigned" text in time slot view.
	* Possible hide the display of "not defined" text in time slot view.
	* Possible hide the display of "Time" text in time slot view.
	* Added session number, category and shortkey to be used in template 
	  of session list.

2007-10-01
	* Added defining a slot for all rooms, for lunch etc.
	* Sort session list on category and number.
	* Sort speaker list on name, firstname.
	* Added session number, category and shortkey to be used in template 