@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
 	'author_company' => '',
-	'version' => '0.1.11',
+	'version' => '0.1.12',
 	'constraints' => array(
 		'depends' => array(
 			'cms' => '',
