@@ -1,3 +1,9 @@
+2008-02-11
+	* Fixed out of memory error when create the first session.
+	* Speaker list now shows only speaker with sessions for the event.
+	* Fixed division by zero error displaying time slot list when no rooms 
+	  are defined.
+
 2007-12-25
 	* Updated localization files and manual.
 	
